# qmp-forex-bot

./: .env.example  README.md  pyproject.toml  test_correlation.py  test_correlation_tune.py  test_enhanced_filters.py  test_ftmo_connect.py  test_live_signals.py  test_multi_tf.py  test_propfirm_sim.py  test_qqe_obos.py  test_structure_backtest.py  test_structure_tune.py
forex_signal_engine/: __init__.py  __main__.py  backtester.py  config.py  filters.py  indicators.py  main.py  market_structure.py  mt5_executor.py  news_filter.py  notifier.py  qqe_obos.py  risk_manager.py  run_backtest.py  signal_engine.py  test_indicators.py
