[project]
name = "forex-signal-engine"
version = "1.0.0"
description = "QMP Filter Forex Signal Bot — MACD Platinum + QQE ADV dual-confirmation trading system"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
mt5 = ["MetaTrader5>=5.0.45"]
dev = ["pytest>=7.0"]

[project.scripts]
qmp-bot = "forex_signal_engine.main:main"
qmp-backtest = "forex_signal_engine.run_backtest:main"
